# hermes-replit

./: .gitignore  .replit  Nadiya  README.md  cf_cookie_cache.json  firecrawl_gen.py  hermes.sh  log  mail.txt  openrouter_signup.py  or_token_harvester.html  package-lock.json  run_cloakbrowser.py  script.sh  sensitive.txt  setup_cloudflare.sh  setup_wireproxy.sh  sync.sh  tempfile  torbox_curl_responses.md  wireproxy.conf
.hermes_data/: .hermes_data  .hermes_history  .skills_prompt_snapshot.json  .update_check  SESSION-NOTES.md  c.json  channel_directory.json  config (copy).yaml  dump_err.txt  fc_search.mjs  gateway.pid  gateway_state.json  kanban.db  models_dev_cache.json  ollama_cloud_models_cache.json  processes.json  provider_models_cache.json  response_store.db  verification_evidence.db  webui.ctl.env
credentials/: cloudflare (copy).txt  kilocode_credentials.txt  mail.txt
docs/: Instructions.txt  torbox-info.md
logs/: reqs_signup.json  requests.json  signup_result.txt
or_profile/: Local State  SingletonCookie  SingletonLock  SingletonSocket
or_signup_rust/: Cargo.toml
or_signup_rust/src/: main.rs
proton_profile/: Local State  SingletonCookie  SingletonLock  SingletonSocket  first_party_sets.db
scripts/: Cf.sh  Signup  add-modifier-keys.py  backup.sh  brave  cf-playground  cf_playground_capture.py  cf_playground_probe.py  cf_playground_proxy.py  cfapi.sh  change-model  cloak_replace.py  cloak_replace.sh  cloudflare_signup.py  cloudflare_signup.sh  email  enable-touch-keyboard.sh  firecrawl_gen.py  firecrawl_install.sh  firecrawl_signup.sh  firefox  (+38 more)
(+1949 files in other folders)
