[package]
name = "or_signup"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scraper = "0.22"
regex = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
